  that provide the ``socketpair`` function, and when using paramiko.
  (Andrew Bennetts, #590637)

* ``Branch.copy_content_into`` is now a convenience method dispatching to
  a ``InterBranch`` multi-method. This permits ``bzr-loom`` and other
  plugins to intercept this even when a ``RemoteBranch`` proxy is in use.
  (Robert Collins, #201613)

* Use lazy imports in ``bzrlib/merge.py`` so that plugins like ``news_merge``
  do not cause modules to be loaded unnecessarily just because the plugin
  registers a merge hook.  This improves ``bzr rocks`` time by about 25%
  in a default installation (with just the core plugins).
  (Andrew Bennetts)

Documentation
*************

* Added ``regression`` tag to our tags list. (Robert Collins)

* Improved our release checklist to have a bit less churn and leave things
  ready-to-go for the next action (including other people doing
  development). (Robert Collins)

API Changes
***********

* ``bzrlib.branch.InterBranch._get_branch_formats_to_test`` now returns
  an iterable of format pairs, rather than just a single pair, permitting
  InterBranch objects that work with multiple permutations to be
  comprehensively tested. (Robert Collins)

* ``bzrlib.knit.KnitSequenceMatcher``, which has been deprecated since
  2007, has been deleted.  Use ``PatienceSequenceMatcher`` from
  ``bzrlib.patiencediff`` instead. (Andrew Bennetts)

* ``bzrlib.transport.ssh.SSHVendor.connect_ssh`` now returns an object
  that implements the interface of ``bzrlib.transport.ssh.SSHConnection``.
  Third-party implementations of ``SSHVendor`` may need to be updated
  accordingly.  Similarly, any code using ``SSHConnection`` directly will
  need to be updated.  (Andrew Bennetts)

* The constructor of ``bzrilb.smart.medium.SmartSSHClientMedium`` has
  changed to take an ``SSHParams`` instance (replacing many individual
  values).  (Andrew Bennetts)

Internals
*********

* Improved ``bzrlib.urlutils`` to handle lp:foo/bar URLs. (Gordon Tyler)

Testing
*******
